--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:title" content="Pyramid Adventures">
+<meta property="og:description" content="Yoga tales for kids.">
+<meta property="og:image" content="images/thumbnail.jpg">
+<meta property="og:url" content="https://pyramidadventures.co.uk/index.html">
+
 <title>Pyramid Adventures</title>
 
 <!-- Stylesheets -->
@@ -12,6 +17,26 @@
 <link type="text/css" href="icons/font-awesome/css/font-awesome.css" rel="stylesheet">
 <link type="text/css" href="icons/rondo/style.css" rel="stylesheet">
 <link type="text/css" href="css/theme.css" rel="stylesheet">
+
+<!-- Favicon -->
+<link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="images/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="images/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="images/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="images/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+
 </head> 
 
 <body>
@@ -21,7 +46,7 @@
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
         <a class="navbar-brand" href="#">
-          <img src="images/nav-bar-logo.jpg" class="nav-bar-logo"></img>
+          <img src="images/nav-bar-logo.jpg" class="nav-bar-logo hidden-xs hidden-sm hidden-md"></img>
         </a>
       </div>
       <div class="collapse navbar-collapse hidden-xs">
@@ -64,7 +89,11 @@
     <div class="section-headlines">
       <h4>About us</h4>
       <div>
-        Lucy is an experienced primary school teacher who is now on a mission to share her joy of yoga with even more children.   Lucy knows first hand, the positive impact of yoga on children, during her time as a classroom teacher, she always made time for yoga because she knew it could teach them skills of self-regulation, focus, empathy and strength.  But of course, none of this would have gone down well with the children unless it was FUN (which it truly is … silly at times too!)   It is for this reason that Lucy left mainstream teaching with a vision to bring this joyful, empowering practise to as many children as possible!  Alongside her teaching qualifications, Lucy is now a certified Kids Yoga Teacher.  With a wealth of experience of working with children, Lucy understands the developmental goals of nursery and primary aged children and now alongside her in depth yoga training, children taking part in Pyramid Adventures have an enthusiastic, caring, and knowledgeable teacher.
+        <img src="images/portrait.jpg" class="portrait"></img>
+        <p>
+          Lucy is an experienced primary school teacher who is now on a mission to share her joy of yoga with even more children.   Lucy knows first hand, the positive impact of yoga on children, during her time as a classroom teacher, she always made time for yoga because she knew it could teach them skills of self-regulation, focus, empathy and strength.  But of course, none of this would have gone down well with the children unless it was FUN (which it truly is … silly at times too!)   It is for this reason that Lucy left mainstream teaching with a vision to bring this joyful, empowering practise to as many children as possible!  Alongside her teaching qualifications, Lucy is now a certified Kids Yoga Teacher.  With a wealth of experience of working with children, Lucy understands the developmental goals of nursery and primary aged children and now alongside her in depth yoga training, children taking part in Pyramid Adventures have an enthusiastic, caring, and knowledgeable teacher.
+        </p>
+        <img src="images/Certified Cosmic Kids yoga teacher.png" class="centered-img"></img>
       </div>
     </div>
   </div>
@@ -138,10 +167,10 @@
       <h4>Join in</h4>
       <div>
         <p>
-          Lucy offers sessions in schools, pre-schools, nurseries.  She can work with you to find a package that can suit your needs. 
+          Lucy offers sessions in schools, pre-schools, nurseries.  She can work with you to find a package that can suit your needs  Coming soon are drop in sessions at exciting new venues, details will be released as soon as they are available.
         </p>
         <p>
-          Pyramid Adventures also have a session at *** on ***
+          To find out more, email <a href="mailto:yoga@pyramidadventures.co.uk">yoga@pyramidadventures.co.uk</a> and keep watching on Instagram <a href="https://www.instagram.com/pyramidadventures" target="_blank">@pyramidadventures</a>
         </p>
       </div>
     </div>
