--- a/index.html
+++ b/index.html
@@ -179,8 +179,11 @@
       <h4>Join in</h4>
       <div>
         <p>
-          Lucy offers sessions in schools, pre-schools, nurseries.  She can work with you to find a package that can suit your needs  Coming soon are drop in sessions at exciting new venues, details will be released as soon as they are available.
+          Lucy offers sessions in schools, pre-schools, nurseries in Cheltenham, Gloucester, Bristol and surrounding areas.  She can work with you to find a package that can suit your needs  Coming soon are drop in sessions at exciting new venues, details will be released as soon as they are available.
         </p>
+	 <p>
+          Lucy can also bring Pyramid Advenutures right into your home!  Private sessions for your children can be organised for a truly personlised yoga adventure.
+        </p>         
         <p>
           To find out more, email <a href="mailto:yoga@pyramidadventures.co.uk">yoga@pyramidadventures.co.uk</a> and keep watching on Instagram <a href="https://www.instagram.com/pyramidadventures" target="_blank">@pyramidadventures</a>
         </p>
