--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <h4>Join in</h4>
       <div>
         <p>
-          Lucy offers sessions in schools, pre-schools, nurseries in Cheltenham, Gloucester, Bristol and surrounding areas.  She can work with you to find a package that can suit your needs  Coming soon are drop in sessions at exciting new venues, details will be released as soon as they are available.
+          Lucy offers sessions in schools, pre-schools, nurseries in Cheltenham, Gloucester, Bristol and surrounding areas.  She can work with you to find a package that can suit your needs.  Coming soon are drop in sessions at exciting new venues, details will be released as soon as they are available.
         </p>
 	 <p>
           Lucy can also bring Pyramid Advenutures right into your home!  Private sessions for your children can be organised for a truly personlised yoga adventure.
