--- a/index.html
+++ b/index.html
@@ -191,6 +191,23 @@
     </div>
 </div>
 
+<div id="what-people-say" class="jumper"></div>
+ <div class="section type-1">
+  <div class="container">
+    <div class="section-headlines">
+      <h4>Join in</h4>
+      <div>
+        <p>
+          Mr Toogood at Holy Cross in Bristol says ...
+        </p>
+	 <p>
+          Lucy is a truly exceptional and inspirational yoga teaching and I highly recommend her yoga experience to all.  She teaches with great enthusiasm that ignites passion into the children that she teaches.  One of the children said "when I grow up I want to be a yoga man!".  Lucy creates a fantastic environment for learning yoga, she uses peaceful music, lighting and a calming voice.  She has a fanstastic ability to connect with the pupils who are often asking when she will return!  She differentiates between classes ensuring she pitches her teaching to an appropriate level, for example, using stories in Reception and KS1 to hook the children in, to using a more formal approach with the older children.  I can honestly say that it was a joy and priviledge to ahve Lucy teach at our school and we cannot wait to have her back again to teach our children.  My advice ... book her immediately, your children will love it!
+        </p>
+      </div>
+    </div>
+</div>	 
+	 
+	 
 </div>
 </div>
 <footer class="footer">
