--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
 </div>
 
 <div id="what-people-say" class="jumper"></div>
- <div class="section type-1">
+ <div class="section type-2">
   <div class="container">
     <div class="section-headlines">
-      <h4>Join in</h4>
+      <h4>What people say</h4>
       <div>
         <p>
           Mr Toogood at Holy Cross in Bristol says ...
