--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           Mr Toogood at Holy Cross in Bristol says ...
         </p>
         <p>
-          Lucy is a truly exceptional and inspirational yoga teaching and I highly recommend her yoga experience to all.  She teaches with great enthusiasm that ignites passion into the children that she teaches.  One of the children said "when I grow up I want to be a yoga man!".  Lucy creates a fantastic environment for learning yoga, she uses peaceful music, lighting and a calming voice.  She has a fanstastic ability to connect with the pupils who are often asking when she will return!  She differentiates between classes ensuring she pitches her teaching to an appropriate level, for example, using stories in Reception and KS1 to hook the children in, to using a more formal approach with the older children.  I can honestly say that it was a joy and priviledge to have Lucy teach at our school and we cannot wait to have her back again to teach our children.  My advice ... book her immediately, your children will love it!
+          Lucy is a truly exceptional and inspirational yoga teacher and I highly recommend her yoga experience to all.  She teaches with great enthusiasm that ignites passion into the children that she teaches.  One of the children said "when I grow up I want to be a yoga man!".  Lucy creates a fantastic environment for learning yoga, she uses peaceful music, lighting and a calming voice.  She has a fanstastic ability to connect with the pupils who are often asking when she will return!  She differentiates between classes ensuring she pitches her teaching to an appropriate level, for example, using stories in Reception and KS1 to hook the children in, to using a more formal approach with the older children.  I can honestly say that it was a joy and priviledge to have Lucy teach at our school and we cannot wait to have her back again to teach our children.  My advice ... book her immediately, your children will love it!
         </p>
       </div>
     </div>
@@ -192,7 +192,7 @@
       <h4>Join in</h4>
       <div>
         <p>
-          Lucy offers sessions in schools, pre-schools, nurseries in Cheltenham, Gloucester, Bristol and surrounding areas.  She can work with you to find a package that can suit your needs.  Coming soon are drop in sessions at exciting new venues, details will be released as soon as they are available.
+          Lucy offers yoga sessions in schools, pre-schools, nurseries in Cheltenham, Gloucester, Bristol and surrounding areas.  She can work with you to find a package that can suit your needs.  Lucy is also passionate to bring yoga to more schools and offers bespoke CPD training package for your teaching staff.  
         </p>
 	      <p>
           Lucy can also bring Pyramid Advenutures right into your home!  Private sessions for your children can be organised for a truly personlised yoga adventure.
