Work in progress adding photos

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         <ul>
       </div>
     </div>
+    <img src="images/gladfest-tree.jpg" class="img-portrait"></img>
   </div>
 </div>
 
@@ -165,6 +166,7 @@
         </p>
       </div>
     </div>
+    <img src="images/gladfest-point.jpg" class="img-landscape"></img>
   </div>
 
   <div class="mixitup">
@@ -190,6 +192,7 @@
   <div class="container">
     <div class="section-headlines">
       <h4>Join in</h4>
+      <img src="images/gladfest-laugh.jpg" class="img-landscape"></img>
       <div>
         <p>
           Lucy offers yoga sessions in schools, pre-schools, nurseries in Cheltenham, Gloucester, Bristol and surrounding areas.  She can work with you to find a package that can suit your needs.  Lucy is also passionate to bring yoga to more schools and offers bespoke CPD training package for your teaching staff.  
@@ -201,6 +204,7 @@
           To find out more, email <a href="mailto:yoga@pyramidadventures.co.uk">yoga@pyramidadventures.co.uk</a> and keep watching on Instagram <a href="https://www.instagram.com/pyramidadventures" target="_blank">@pyramidadventures</a>
         </p>
       </div>
+      <img src="images/gladfest-eye-pillow.jpg" class="img-landscape"></img>
     </div>
   </div>
 </div>
