--- a/index.html
+++ b/index.html
@@ -166,6 +166,12 @@
         <p>
           Lucy is a truly exceptional and inspirational yoga teacher and I highly recommend her yoga experience to all.  She teaches with great enthusiasm that ignites passion into the children that she teaches.  One of the children said "when I grow up I want to be a yoga man!".  Lucy creates a fantastic environment for learning yoga, she uses peaceful music, lighting and a calming voice.  She has a fanstastic ability to connect with the pupils who are often asking when she will return!  She differentiates between classes ensuring she pitches her teaching to an appropriate level, for example, using stories in Reception and KS1 to hook the children in, to using a more formal approach with the older children.  I can honestly say that it was a joy and priviledge to have Lucy teach at our school and we cannot wait to have her back again to teach our children.  My advice ... book her immediately, your children will love it!
         </p>
+	 <p>
+         Gladstone's Library says ...
+        </p>
+	 <p>
+          Gladfest is an annual literary festival held at Gladstone’s Library in North Wales.  We’ve had feedback, over the years, that we need more events aimed at children … but we didn’t want to fall into the trap of having just crafting events; we wanted something exciting, something where children could be inspired, enthralled and ultimately learn a new skill. Hence our contact with Lucy and Pyramid Adventures. The fact that Lucy is a certified Cosmic Kids Yoga instructor ticked our professional qualifications box and, in addition, her experience as a primary school teacher ticked our “she won’t be daunted by a large group of children” box! Lucy’s ability to capture the imagination of children of many ages was quite staggering. Her stories gripped and charmed all. At no point were any children distracted, nor did they give up. Instead, when Lucy had finished, several keen ‘yogis’ asked for more moves and they stayed behind to help clear up the mats whilst chatting to Lucy about the fun bits of the session. So impressed were many parents that they contacted us to see if they could book Lucy for one to one sessions. Thank you Lucy for bringing a breath of fresh air to Gladfest and to Gladstone’s Library.
+        </p>
       </div>
       <img src="images/gladfest-point.jpg" class="img-landscape"></img>
     </div>
