--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
           As suggested in our name, yoga with Pyramid Adventures is an adventure.
         </p>
         <p>
-          We start each session with a warm up, ensuring that our bodies are ready for the adventure ahead.
-          Lucy tells the story, which she brings to life with yoga postures.  Each time she does a posture, the rest of the children join her.
-          The story comes to an end with a few moments of relaxation, it is the time to reflect on the adventure we’ve had and think about any morals or lessons we can learn.
-          Once we’ve finished our relaxation, we will come together for a quick game before we come to the end of our session.
+          Each session starts with a warm up, ensuring that our bodies are ready for the adventure ahead.
+          With younger children, Lucy tells a story, which she brings to life with yoga poses.  Each time she does a pose, the children join her.
+          The story comes to an end with a few moments of relaxation, it is the time to reflect on the adventure had and think about any morals or lessons that can be learned.
+          For older children, Lucy introduces more 'grown up' yoga flows.  Using magical and empowering music, children practise a sequence of yoga poses with Lucy's guidance.  These sessions end in a relaxation meditation, which have been proven to be so relaxing, some children have needed waking up at the end of Lucy's sessions!
         </p>
       </div>
       <img src="images/gladfest-laugh.jpg" class="img-landscape"></img>
