--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <p>
           Each session starts with a warm up, ensuring that our bodies are ready for the adventure ahead.
           With younger children, Lucy tells a story, which she brings to life with yoga poses.  Each time she does a pose, the children join her.
-          The story comes to an end with a few moments of relaxation, it is the time to reflect on the adventure had and think about any morals or lessons that can be learned.
+          The story comes to an end with a few moments of relaxation, it is the time to reflect on the adventure, thinking about any morals or lessons that can be learned.
           For older children, Lucy introduces more 'grown up' yoga flows.  Using magical and empowering music, children practise a sequence of yoga poses with Lucy's guidance.  These sessions end in a relaxation meditation, which have been proven to be so relaxing, some children have needed waking up at the end of Lucy's sessions!
         </p>
       </div>
