--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
           The story comes to an end with a few moments of relaxation, it is the time to reflect on the adventure, thinking about any morals or lessons that can be learned.
           For older children, Lucy introduces more 'grown up' yoga flows.  Using magical and empowering music, children practise a sequence of yoga poses with Lucy's guidance.  These sessions end in a relaxation meditation, which have been proven to be so relaxing, some children have needed waking up at the end of Lucy's sessions!
         </p>
+	 <p>
+		 CPD training sessions give staff the tools to confidently bring yoga into their classrooms and the wider school.  As Lucy is an experienced primary school teacher, she understands the realities of day to day life in a school, and her CPD programme reflects that.  Not only will staff learn how to teach whole class yoga lessons,  but they will learn sneaky ways of getting yoga into the classroom, when the children need a moment of calm (without moving tables and chairs!), or how to set up intervention sessions for particular children.
+	 </p>
       </div>
       <img src="images/gladfest-laugh.jpg" class="img-landscape"></img>
     </div>
