--- a/index.html
+++ b/index.html
@@ -177,6 +177,19 @@
 	 <p>
           Gladfest is an annual literary festival held at Gladstone’s Library in North Wales.  We’ve had feedback, over the years, that we need more events aimed at children … but we didn’t want to fall into the trap of having just crafting events; we wanted something exciting, something where children could be inspired, enthralled and ultimately learn a new skill. Hence our contact with Lucy and Pyramid Adventures. The fact that Lucy is a certified Cosmic Kids Yoga instructor ticked our professional qualifications box and, in addition, her experience as a primary school teacher ticked our “she won’t be daunted by a large group of children” box! Lucy’s ability to capture the imagination of children of many ages was quite staggering. Her stories gripped and charmed all. At no point were any children distracted, nor did they give up. Instead, when Lucy had finished, several keen ‘yogis’ asked for more moves and they stayed behind to help clear up the mats whilst chatting to Lucy about the fun bits of the session. So impressed were many parents that they contacted us to see if they could book Lucy for one to one sessions. Thank you Lucy for bringing a breath of fresh air to Gladfest and to Gladstone’s Library.
         </p>
+	       <p>
+	      Teachers from CPD sessions say …
+
+Lucy really engaged our team, delivering in a calm and positive manner.  
+I can see the benefits for children with regards to relaxation and managing anger.
+I like the fact that today’s session has got everyone on board across the school.
+I enjoyed having a go at yoga from a child’s perspective.
+So many fabulous ideas, lots that can be done very easily within the classroom.  
+I am a complete yoga novice, but can really see the benefits for children (and myself) in terms of health and well being.
+I feel really excited about bringing yoga to the school.
+Very enjoyable and inspiring.
+		       </p>
+
       </div>
       <img src="images/gladfest-point.jpg" class="img-landscape"></img>
     </div>
