--- a/index.html
+++ b/index.html
@@ -181,18 +181,18 @@
       </div>
       <img src="images/gladfest-point.jpg" class="img-landscape"></img>
     </div>
-	 <p>
+	<div> 
 	      Teachers from CPD sessions say …
-
-Lucy really engaged our team, delivering in a calm and positive manner.  
-I can see the benefits for children with regards to relaxation and managing anger.
-I like the fact that today’s session has got everyone on board across the school.
-I enjoyed having a go at yoga from a child’s perspective.
-So many fabulous ideas, lots that can be done very easily within the classroom.  
-I am a complete yoga novice, but can really see the benefits for children (and myself) in terms of health and well being.
-I feel really excited about bringing yoga to the school.
-Very enjoyable and inspiring.
-		       </p>
+ <ul class="centred-list">
+<li>Lucy really engaged our team, delivering in a calm and positive manner.<li>  
+<li>I can see the benefits for children with regards to relaxation and managing anger.<li>
+<li>I like the fact that today’s session has got everyone on board across the school.<li>
+<li>I enjoyed having a go at yoga from a child’s perspective.<li>
+<li>So many fabulous ideas, lots that can be done very easily within the classroom.<li>
+<li>I am a complete yoga novice, but can really see the benefits for children (and myself) in terms of health and well being.<li>
+<li>I feel really excited about bringing yoga to the school.<li>
+<li>Very enjoyable and inspiring.<li>
+<ul>
     
   </div>
 
