Better descriptions of what to expect

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
         </p>
         <p>
           Each session starts with a warm up, ensuring that our bodies are ready for the adventure ahead.
-          With younger children, Lucy tells a story, which she brings to life with yoga poses.  Each time she does a pose, the children join her.
+          With younger children, Lucy tells a story, which she brings to life with yoga poses.  Each time she does a pose, the children join her.  These stories can take children on adventures into space, under the sea or off to Africa!
           The story comes to an end with a few moments of relaxation, it is the time to reflect on the adventure, thinking about any morals or lessons that can be learned.
-          For older children, Lucy introduces more 'grown up' yoga flows.  Using magical and empowering music, children practise a sequence of yoga poses with Lucy's guidance.  These sessions end in a relaxation meditation, which have been proven to be so relaxing, some children have needed waking up at the end of Lucy's sessions!
+          For older children, Lucy introduces more 'grown up' yoga flows.  Using magical and empowering music, children practise a sequence of yoga poses which encourages strength building and focus.  From the famous'downward dog' and 'tree' poses to the lesser known 'dancer' and 'warrior III' poses, children are exposed to the varied and expansive world of yoga. These sessions end in a relaxation meditation, which have been proven to be so relaxing, some children have needed waking up at the end of Lucy's sessions!
         </p>
 	 <p>
 		 CPD training sessions give staff the tools to confidently bring yoga into their classrooms and the wider school.  As Lucy is an experienced primary school teacher, she understands the realities of day to day life in a school, and her CPD programme reflects that.  Not only will staff learn how to teach whole class yoga lessons,  but they will learn sneaky ways of getting yoga into the classroom, when the children need a moment of calm (without moving tables and chairs!), or how to set up intervention sessions for particular children.
