--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span>
             <span class="icon-bar"></span> </button>
           <a class="navbar-brand" href="#">
-            <img src="images/nav-bar-logo.jpg" class="nav-bar-logo hidden-sm hidden-md"></img>
+            <img src="images/nav-bar-logo.jpg" class="nav-bar-logo hidden-xs hidden-sm hidden-md"></img>
           </a>
         </div>
         <div class="collapse navbar-collapse hidden-xs">
