--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div>
           <p>
             During the lockdown period, Lucy has been working with children online using Zoom and Facebook for live
-            streamed sessions to
+            streamed sessions.
           </p>
           <p>
             Lucy has also written an interactive yoga story which you can now find on her Youtube channel. You’ll be
@@ -161,8 +161,7 @@
               Lucy normally teaches yoga from the front of the setting, at a distance from the children. As a result,
               sessions with Covid in mind are just as engaging and effective as before. She knows how to support all
               children by responding to what she sees and hears from the children, from a distance, without disrupting
-              the
-              flow of the session.
+              the flow of the session.
             </p>
           </div>
         </div>
