Added online packages

--- a/index.html
+++ b/index.html
@@ -146,25 +146,6 @@
             </div>
           </div>
         </div>
-        <div class="section-headlines">
-          <h5>Covid Precautions</h5>
-          <div>
-            <p>
-              Yoga naturally lends itself to social distancing, mats are placed to ensure social distancing.
-              Mats are cleaned with antibacterial spray after each use.
-            </p>
-            <p>
-              In addition, when mats are set up for a session, they are sprayed with antibacterial spray once placed,
-              ensuring the first person to touch the mat after it has been cleaned is the little yogi.
-            </p>
-            <p>
-              Lucy normally teaches yoga from the front of the setting, at a distance from the children. As a result,
-              sessions with Covid in mind are just as engaging and effective as before. She knows how to support all
-              children by responding to what she sees and hears from the children, from a distance, without disrupting
-              the flow of the session.
-            </p>
-          </div>
-        </div>
       </div>
     </div>
   </div>
@@ -328,21 +309,20 @@
       <div class="section-headlines">
         <h4>Join in</h4>
         <div>
-
           <p>
-            Lucy offers yoga sessions in schools, pre-schools, nurseries in Cheltenham, Gloucester, Bristol and
-            surrounding areas. She can work with you to find a package that can suit your needs. Lucy is also
-            passionate
-            to bring yoga to more schools and offers bespoke CPD training package for your teaching staff.
+            Lucy offers yoga sessions directly into your classroom using Zoom, wherever you are in the UK.
           </p>
+          <a href="images/online-packages.jpg" target="_blank">
+            <img src="images/online-packages.jpg" class="img-landscape"></img>
+          </a>
           <p>
-            Lucy can also bring Pyramid Advenutures right into your home! Private sessions for your children can be
-            organised for a truly personlised yoga adventure.
+            Lucy is also passionate to bring yoga to more schools and offers bespoke CPD training package for your
+            teaching staff.
           </p>
           <p>
             To find out more, email <a href="mailto:yoga@pyramidadventures.co.uk">yoga@pyramidadventures.co.uk</a> and
-            keep watching on Instagram <a href="https://www.instagram.com/pyramidadventures"
-              target="_blank">@pyramidadventures</a>
+            keep watching on
+            Instagram <a href="https://www.instagram.com/pyramidadventures" target="_blank">@pyramidadventures</a>.
           </p>
           <img src="images/gladfest-eye-pillow.jpg" class="img-landscape"></img>
         </div>
