--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
     <meta charset="utf-8" />
     <meta property="og:title" content="Pyramid Adventures" />
-    <meta property="og:description" content="Yoga tales for kids." />
+    <meta property="og:description" content="Lucy Kingsley - Creative Catalyst." />
     <meta property="og:image" content="%PUBLIC_URL%/images/logo.jpg" />
     <meta
       property="og:url"
